@@ -63,7 +63,7 @@ public class MBankStatementTax extends X_JP_BankStatementTax {
 	 */
 	protected void setPrecision (int precision)
 	{
-		m_precision = new Integer(precision);
+		m_precision = Integer.valueOf(precision);
 	}	//	set
 
 	/**
