@@ -14,6 +14,7 @@
 package jpiere.base.plugin.webui.apps.form;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -238,7 +239,7 @@ public abstract class JPiereCreateFromInvoice extends CreateFrom
 			{
 				Vector<Object> line = new Vector<Object>(7);
 				//  0-Selection
-				line.add(new Boolean(false));
+				line.add(Boolean.valueOf(false));
 				//  1-Qty
 				BigDecimal qtyMovement = rs.getBigDecimal(1);
 				BigDecimal multiplier = rs.getBigDecimal(2);
@@ -338,7 +339,7 @@ public abstract class JPiereCreateFromInvoice extends CreateFrom
             {
 	            Vector<Object> line = new Vector<Object>(7);
 	            // 0-Selection
-	            line.add(new Boolean(false));
+	            line.add(Boolean.valueOf(false));
 	            // 1-Qty
 	            line.add(rs.getBigDecimal(3));
 	            // 2-UOM
@@ -461,7 +462,7 @@ public abstract class JPiereCreateFromInvoice extends CreateFrom
 					product = MProduct.get(Env.getCtx(), M_Product_ID);
 					precision = product.getUOMPrecision();
 				}
-				QtyEntered = QtyEntered.setScale(precision, BigDecimal.ROUND_HALF_DOWN);
+				QtyEntered = QtyEntered.setScale(precision, RoundingMode.HALF_UP);
 				//
 				if (log.isLoggable(Level.FINE)) log.fine("Line QtyEntered=" + QtyEntered
 					+ ", Product_ID=" + M_Product_ID
@@ -600,7 +601,7 @@ public abstract class JPiereCreateFromInvoice extends CreateFrom
 				BigDecimal igt = invoice.getGrandTotal();
 				BigDecimal percent = Env.ONE;
 				if (ogt.compareTo(igt) != 0)
-					percent = igt.divide(ogt, 10, BigDecimal.ROUND_HALF_UP);
+					percent = igt.divide(ogt, 10, RoundingMode.HALF_UP);
 				MCurrency cur = MCurrency.get(p_order.getCtx(), p_order.getC_Currency_ID());
 				int scale = cur.getStdPrecision();
 
@@ -610,7 +611,7 @@ public abstract class JPiereCreateFromInvoice extends CreateFrom
 					if (percent != Env.ONE) {
 						BigDecimal propDueAmt = ops.getDueAmt().multiply(percent);
 						if (propDueAmt.scale() > scale)
-							propDueAmt = propDueAmt.setScale(scale, BigDecimal.ROUND_HALF_UP);
+							propDueAmt = propDueAmt.setScale(scale, RoundingMode.HALF_UP);
 						ips.setDueAmt(propDueAmt);
 					}
 					ips.setC_Invoice_ID(invoice.getC_Invoice_ID());
@@ -726,7 +727,7 @@ public abstract class JPiereCreateFromInvoice extends CreateFrom
 
 						Vector<Object> line = new Vector<Object>();
 						//  0-Selection
-						line.add(new Boolean(false));
+						line.add(Boolean.valueOf(false));
 						//  1-Qty
 						line.add(qtyEntered);
 						//  2-UOM
@@ -751,7 +752,7 @@ public abstract class JPiereCreateFromInvoice extends CreateFrom
 
 				Vector<Object> line = new Vector<Object>();
 				//  0-Selection
-				line.add(new Boolean(false));
+				line.add(Boolean.valueOf(false));
 				//  1-Qty
 				BigDecimal qtyOrdered = rs.getBigDecimal(1);
 				BigDecimal multiplier = rs.getBigDecimal(2);
